--- a/cfn/sberts-website.yaml
+++ b/cfn/sberts-website.yaml
@@ -20,13 +20,13 @@ Parameters:
   RepoURL:
     Type: String
     Description: The URL of the GitHub repository
-    Default: https://github.com/sberts/sberts-website.git
+    Default: https://github.com/sberts/sberts-blog.git
 Resources:
 
   S3BucketMain:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: sberts-website
+      BucketName: sberts-blog
       AccessControl: Private
 
   BucketPolicy:
@@ -51,7 +51,7 @@ Resources:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZoneId
-      Name: www.megalopolis.city
+      Name: www.sberts.com
       Type: A
       AliasTarget:
         HostedZoneId: Z2FDTNDATAQYW2  # CloudFront hosted zone ID
@@ -144,7 +144,7 @@ Resources:
             ResponsePagePath: /index.html
         HttpVersion: http2
         Aliases:
-          - www.megalopolis.city
+          - www.sberts.com
         ViewerCertificate:
           AcmCertificateArn: !Sub arn:aws:acm:us-east-1:${AWS::AccountId}:certificate/${CertificateId}
           MinimumProtocolVersion: TLSv1.2_2021
