added cache policy to cloudfront distribution

--- a/public/content/website.yaml
+++ b/public/content/website.yaml
@@ -1,3 +1,4 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Static Web Site
 
@@ -113,6 +114,7 @@ Resources:
           MinimumProtocolVersion: TLSv1.2_2021
           SslSupportMethod: sni-only
         DefaultCacheBehavior:
+          CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6
           AllowedMethods:
             - DELETE
             - GET
